Fix whitespace'

--- a/index.css
+++ b/index.css
@@ -6,4 +6,6 @@ html {
   box-sizing: border-box
 }
 
-*, *:before, *:after { box-sizing: inherit }
+*, *:before, *:after {
+  box-sizing: inherit
+}
